# VINS-Mono

camera_model/: CMakeLists.txt
config/a2rl/: a2rl_config.yaml  a2rl_config_no_extrinsic.yaml
pose_graph/: CMakeLists.txt
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: a2rl.launch
